syntax = "proto3";

option go_package = "mail-service/proto";

package proto;

service MailService {
    rpc SendVerificationCodeMail(MailRequest) returns (MailResponse) {}
    rpc SendResetPasswordMail(MailRequest) returns (MailResponse) {}
    rpc SendPlainTextMail(MailRequest) returns (MailResponse) {}
}

message MailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

message MailResponse {
  string message = 1;
}